--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@web3auth/base": "^8.12.4",
     "@web3auth/ethereum-provider": "^8.12.4",
+    "@web3auth/metamask-adapter": "^8.12.4",
     "@web3auth/modal": "^8.12.7",
     "@web3auth/openlogin-adapter": "^8.12.4",
     "ethers": "^6.13.2",
