--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "stripe": "^16.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
