--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@web3auth/metamask-adapter": "^8.12.4",
     "@web3auth/modal": "^8.12.7",
     "@web3auth/openlogin-adapter": "^8.12.4",
+    "axios": "^1.7.7",
     "ethers": "^6.13.2",
     "framer-motion": "^11.3.30",
     "mongoose": "^8.0.2",
